Fix entry scrolling on mobile by fighting through the utterly horrible web nonsense

--- a/web/css/playlist.css
+++ b/web/css/playlist.css
@@ -60,7 +60,6 @@
     color: #bdae93;
 }
 
-
 .playlist_controls_button {
     width: 36px;
     height: 100%;
@@ -137,6 +136,11 @@
     flex-direction: column;
     overflow-y: scroll;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
+#playlist_entry_list.disable-smooth-scrolling-for-toy-touch-device-systems {
+    scroll-behavior: unset !important;
 }
 
 #playlist_context_menu {
